if(HDF5_PARALLEL_COMPRESSION)
	set(OBJS comms/commVars.cpp comms/comms.cpp random/random.cpp random/vMT19937.cpp simd/simd.cpp utils/logger.cpp utils/memAlloc.cpp utils/misc.cpp utils/profiler.cpp utils/tunable.cpp)
else()
	set(OBJS comms/commVars.cpp comms/comms.cpp random/random.cpp random/vMT19937.cpp simd/simd.cpp utils/logger.cpp utils/memAlloc.cpp utils/misc.cpp utils/profiler.cpp utils/tunable.cpp)
endif()

include_directories(.)
if(USE_GPU)
	cuda_add_library(Su2Theta STATIC ${OBJS})
else()
	add_library(Su2Theta STATIC ${OBJS})
endif()
