include_directories(.)
set(LIBS Su2Theta ${CMAKE_THREAD_LIBS_INIT} )
LIST(APPEND LIBS ${MPI_CXX_LIBRARIES})
LIST(APPEND LIBS ${HDF5_LIBRARY})

if(USE_GPU)
  LIST(APPEND LIBS ${CUDA_cufft_LIBRARY} ${CUDA_cudart_LIBRARY})
endif()

add_executable(SimdTest SimdTest.cpp)
add_executable(Su2Test  Su2Test.cpp)
add_executable(Su2HB    Su2HB.cpp)
add_executable(Su2Metro Su2Metro.cpp)
add_executable(Su2Run   Su2Run.cpp)

target_link_libraries(SimdTest ${LIBS} )
target_link_libraries(Su2Test  ${LIBS} )
target_link_libraries(Su2HB    ${LIBS} )
target_link_libraries(Su2Metro ${LIBS} )
target_link_libraries(Su2Run   ${LIBS} )
